新しく描き直した

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<h1>hello world</h1>
-<h2>ハロワーク</h2>
-<h3>pa</h3>
-<h4>しのたつはやくPS４よこし</h4>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body><h1>hello world</h1>
+  <h2>ハロワーク</h2>
+  <h3>pa</h3>
+  <h4>しのたつはやくPS４よこし</h4>
+
+  </body>
+</html>
