--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      img{width:200px;}
+    </style>
   </head>
   <body><h1>hello world</h1>
   <h2>ハロワーク</h2>
   <h3>pa</h3>
-  <h4>しのたつはやくPS４よこし</h4>
+  <h4>しのたつはやくPS４よこせ</h4>
+
+  <img src="skype.jpg" alt="">
 
   </body>
 </html>
